# lyrfin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  pr-title.yml  release-build.yml  release-please.yml  release.yml
assets/: config.toml  keybindings.toml
assets/themes/: aurora.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  KEYBINDINGS.md  RELEASE_MANAGER.md  RELEASING.md  ROADMAP.md  SPOTIFY.md  STATUS.md  lyrfin.1
src/: action.rs  appearance.rs  arabic.rs  artistinfo.rs  artwork.rs  cover.rs  coversearch.rs  datetime.rs  event.rs  icons.rs  lyrics.rs  main.rs  podcastfetch.rs  query.rs  session.rs  snapshot.rs  stats.rs  termquery.rs  translate.rs  tui.rs
src/app/: browser.rs  covers.rs  discovery.rs  effects.rs  equalizer.rs  find.rs  grid_art.rs  info.rs  init.rs  layout.rs  library_sync.rs  local_browse.rs  mod.rs  mouse.rs  nav.rs  navigation.rs  nowplaying.rs  palette.rs  pane_resize.rs  playback.rs  playlists.rs  radio.rs  radio_playlists.rs  release.rs  selection.rs  session_restore.rs  settings.rs  settings_choices.rs  sorting.rs  tick.rs  types.rs  update.rs  visualizer.rs  workers.rs
src/app/spotify/: browse.rs  cache.rs  events.rs  mod.rs  playback.rs  playlist.rs
src/app/tag_editor_tests/: editing.rs  library.rs  mod.rs  playback.rs  playlists.rs
src/app/tags/: editor.rs  mod.rs  search.rs
src/audio/: eq.rs  http_source.rs  mod.rs  resample.rs  stretch.rs  timeshift.rs  visualizer.rs
src/audio/engine/: decode.rs  mod.rs
src/config/: bindings.rs  load.rs  mod.rs
src/core/: mod.rs  model.rs  player.rs  shuffle.rs
src/keymap/: catalog.rs  mod.rs
src/lyricsfetch/: jiosaavn.rs  lrclib.rs  mod.rs  netease.rs
src/media/: mod.rs
src/radio/: directory.rs  mod.rs
src/snapshot/tests/: equalizer_tests.rs  layout_tests.rs  local_browse_tests.rs  mini_tests.rs  mouse_session_tests.rs  nowplaying_tests.rs  overlays_tests.rs  palette_tests.rs  playback_tests.rs  radio_tests.rs  settings_tests.rs  spotify_auth_tests.rs  spotify_playback_tests.rs  spotify_view_tests.rs  tags_search_tests.rs  unified_views_tests.rs
src/spotify/: artwork.rs  auth.rs  logprobe.rs  mod.rs  pathfinder.rs  session.rs  view_cache.rs
src/spotify/api/: client.rs  mod.rs  playlist.rs
src/tags/: mod.rs  patterns.rs  replaygain.rs
src/tagsearch/: mod.rs  sources.rs
src/ui/: breakpoint.rs  mod.rs  theme.rs
src/ui/components/: artist.rs  cover.rs  grid.rs  info.rs  mod.rs  now_bar.rs  onboarding.rs  overlay.rs  overlays.rs  queue.rs  search_bar.rs  selection.rs  shell.rs  sidebar.rs  spectrum.rs  spotify_tracklist.rs  status_bar.rs  table.rs  tag_ui.rs  toggle.rs  tracklist.rs
src/ui/views/: equalizer_view.rs  mini.rs  mod.rs  radio_view.rs  settings_rows.rs  settings_view.rs
src/ui/views/spotify_view/: guides.rs  mod.rs
themes/: aura-dark.toml  aura-light.toml  catppuccin-latte.toml  catppuccin-mocha.toml  dracula-dark.toml  dracula-light.toml  example.toml  foxnight-carbon.toml  foxnight-dawn.toml  foxnight-day.toml  foxnight-dusk.toml  foxnight-nord.toml  foxnight-tera.toml  foxnight.toml  github-dark.toml  github-light.toml  gruvbox-dark.toml  gruvbox-light.toml  nord-dark.toml  nord-light.toml  one-dark.toml  one-light.toml  rose-pine-dawn.toml  rose-pine-main.toml  solarized-dark.toml  solarized-light.toml  tokyonight-day.toml  tokyonight-moon.toml  tokyonight-night.toml  tokyonight-storm.toml
